Gap quick CSS fix

--- a/static_assets/styles/club/event.css
+++ b/static_assets/styles/club/event.css
@@ -249,3 +249,8 @@ img.emoji {
   user-select: none;
   -webkit-user-select: none;
 }
+
+.wms512 .leaflet-tile-container img {
+  width: 512.5px !important;
+  height: 512.5px !important;
+}
